# agent-firewall

./: .gitignore  BENCHMARK.md  BENCHMARK_JAILBREAKBENCH.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  README_zh.md  SECURITY.md  STRUCTURE.md  clean_compose.py  fix_remaining.py  mvp-diagram.md  patch.py  release-please-config.json  remove_onRerunProtected.py  rm_docker.py  start-local.sh  test_agent_payload.py  test_composio.py  test_deepseek.py  update_builder.py  update_frontend.py  update_llm.py  update_post.py  update_post_call.py  update_pre.py  update_reg.py  update_results.py  update_run.py  update_tools.py  update_tools2.py  update_tools3.py  中文说明书.md
apps/: README.md
apps/agent-demo/: add_tools.py  pyproject.toml  update_frontend2.py  update_registry.py
apps/agent-demo/agent_firewall_agent_demo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/agent-demo/src/: config.py  main.py  schemas.py
apps/agent-demo/src/agent/: graph.py  mock_llm.py  runtime_access.py  runtime_loader.py  state.py  subagents.py
apps/agent-demo/src/agent/limits/: service.py
apps/agent-demo/src/agent/nodes/: input.py  llm_call.py  policy.py  post_tool_gate.py  pre_tool_gate.py  tools.py
apps/agent-demo/src/agent/rbac/: rbac_config.yaml
apps/agent-demo/src/agent/security/: message_builder.py
apps/agent-demo/src/agent/tools/: hub.py  registry.py
apps/agent-demo/src/agent/tools/providers/: mcp.py
apps/agent-demo/src/routers/: chat.py
apps/agent-demo/tests/: test_llm_call_transport.py  test_resolve_direct_llm.py  test_scan_contract.py  test_scan_via_proxy.py
artical/: article.aux  article.fdb_latexmk  article.fls  article.out  article.tex  article.toc  article.xdv  generate_figures.py  (+1 more)
(+689 files in other folders)
